--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -60,7 +60,8 @@
 				"sap.ui.layout": {},
 				"sap.ui.core": {},
 				"sap.m": {},
-				"sap.f": {}
+				"sap.f": {},
+				"sap.uxap": {}
 			}
 		},
 		"contentDensities": {
